--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg custom-navbar">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <h1 class="mb-0">El Shaddai</h1>
+                    <h1 class="mb-0">El Shaddai Multiservicios</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
             <div class="swiper hero-swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="./images/minisplit.jpg" alt="Instalación de Minisplit">
+                        <img src="Minisplit.jpg" alt="Instalación de Minisplit">
                         <div class="slide-content">
                             <h2>Instalación de Minisplit</h2>
                             <p>Servicio profesional de instalación y mantenimiento</p>
