--- a/Index.html
+++ b/Index.html
@@ -1,75 +1,64 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Shaddai Multiservicios</title>
+    <meta name="description" content="El Shaddai Multiservicios: Instalación de Minisplit, Trabajos de Pintura, Instalación de Tablaroca, Servicios Eléctricos">
+    <meta name="keywords" content="Minisplit, Pintura, Tablaroca, Electricidad, Servicios">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis" rel="preconnect">
+    <link href="https://fonts.gstatic" rel="preconnect" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
-    <header class="header fixed-top">
-        <nav class="navbar navbar-expand-lg custom-navbar">
-            <div class="container">
-                <a class="navbar-brand" href="#">
-                    <h1 class="mb-0">El Shaddai Multiservicios</h1>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#inicio">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#servicios">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#nosotros">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contacto">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+<body class="index-page">
+
+    <header id="header" class="header d-flex align-items-center fixed-top">
+        <div class="container-fluid container-xl position-relative d-flex align-items-center">
+            <a href="index.html" class="logo d-flex align-items-center">
+                <img src="logo.png" alt="Logo El Shaddai Multiservicios">
+            </a>
+
+            <nav id="navmenu" class="navmenu">
+                <ul>
+                    <li><a href="#hero" class="active">Inicio</a></li>
+                    <li><a href="#about">Nosotros</a></li>
+                    <li><a href="#services">Servicios & Productos</a></li>
+                    <li><a href="#portfolio">Galeria</a></li>
+                    <li><a href="#contact">Contacto</a></li>
+                </ul>
+                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+            </nav>
+
+            <a class="btn-get-started flex-md-shrink-0" onclick="return gtag_report_conversion('tel: 81-1719-9855');" href="tel: 81-1719-9855">Cotizar</a>
+        </div>
     </header>
 
-    <main>
-        <section id="inicio" class="hero">
-            <div class="swiper hero-swiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <img src="Minisplit.jpg" alt="Instalación de Minisplit">
-                        <div class="slide-content">
-                            <h2>Instalación de Minisplit</h2>
-                            <p>Servicio profesional de instalación y mantenimiento</p>
-                        </div>
+    <!-- Hero Section -->
+    <main class="main">
+        <section id="hero" class="hero section">
+            <div class="container">
+                <div class="row gy-4">
+                    <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
+                      <h1 data-aos="fade-up">Multiservicios en Monterrey</h1>
+                      <p data-aos="fade-up" data-aos-delay="100">¿Necesitas arreglos en casa o en tu negocio en Monterrey? Nosotros te ofrecemos soluciones integrales: aire acondicionado, tablaroca, pintura, electricidad y mucho más. </p>
+                      <div class="d-flex flex-column flex-md-row" data-aos="fade-up" data-aos-delay="200">
+                        <a href="https://walink.co/e44ed5" target="_blank" rel="noopener" class="btn-get-started" onclick="return gtag_report_conversion('tel: 81-1719-9855');" href="tel: 81-1719-9855">Cotizar <i class="bi bi-arrow-right"></i></a>
+                      </div>
                     </div>
-                    <div class="swiper-slide">
-                        <img src="Minisplit.jpg" alt="Trabajos de Pintura">
-                        <div class="slide-content">
-                            <h2>Trabajos de Pintura</h2>
-                            <p>Transformamos espacios con calidad y profesionalismo</p>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="Minisplit.jpg" alt="Instalación de Tablaroca">
-                        <div class="slide-content">
-                            <h2>Instalación de Tablaroca</h2>
-                            <p>Soluciones profesionales en construcción ligera</p>
-                        </div>
+                    <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out">
+                        <img src="assets/img/Minisplit.jpg" class="img-fluid animated" alt="">
                     </div>
                 </div>
-                <div class="swiper-pagination"></div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
             </div>
-        </section>
+        </section> <!-- Hero Section -->
 
         <section id="servicios" class="services container py-5">
             <h2 class="text-center mb-4">Nuestros Servicios</h2>
