--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
 
-    
 </head>
 <body class="index-page">
 
@@ -92,7 +91,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> <!-- /About Section -->
 
         <section id="nosotros" class="about container py-5">
             <h2 class="text-center mb-4">Sobre Nosotros</h2>
