--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                       </div>
                     </div>
                     <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out">
-                        <img src="assets/img/Minisplit.jpg" class="img-fluid animated" alt="">
+                        <img src="assets/img/photo1.jpg" class="img-fluid animated" alt="">
                     </div>
                 </div>
             </div>
