--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="es">
 
 <head>
+    <!-- Add this line after your other meta tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, smooth-scroll">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Shaddai Multiservicios</title>
@@ -94,11 +96,40 @@
             </div>
         </section> <!-- /About Section -->
 
-        <section id="nosotros" class="about container py-5">
-            <h2 class="text-center mb-4">Sobre Nosotros</h2>
-            <div class="row justify-content-center">
-                <div class="col-md-8 text-center">
-                    <p>Somos una empresa comprometida con la excelencia en servicios de instalación y mantenimiento. Contamos con personal altamente capacitado y años de experiencia en el mercado.</p>
+        <!-- Stats Section -->
+        <section id="services" class="stats section">
+            <h2 class="text-center mb-4">Experiencia</h2>
+            <div class="container" data-aos="fade-up" data-aos-delay="100">
+                <div class="row gy-4">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="stats-item">
+                            <i class="bi bi-emoji-smile" style="color: #2bece3;"></i>
+                            <div class="content">
+                                <span data-purecounter-start="0" data-purecounter-end="515" data-purecounter-duration="1" class="purecounter"></span>
+                                <p>Clientes Satisfechos</p>
+                            </div>
+                        </div>
+                    </div>
+        
+                    <div class="col-lg-4 col-md-6">
+                        <div class="stats-item">
+                            <i class="bi bi-journal-richtext" style="color: #fa5012;"></i>
+                            <div class="content">
+                                <span data-purecounter-start="0" data-purecounter-end="651" data-purecounter-duration="1" class="purecounter"></span>
+                                <p>Trabajos</p>
+                            </div>
+                        </div>
+                    </div>
+        
+                    <div class="col-lg-4 col-md-6">
+                        <div class="stats-item">
+                            <i class="bi bi-headset" style="color: #e92095;"></i>
+                            <div class="content">
+                                <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+                                <p>Marcas</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -146,6 +177,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
