--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         <!-- Copyright -->
         <div class="row align-items-center">
             <div class="col-md-6 text-center text-md-start">
-                <p class="mb-md-0 text-muted">&copy; 2025 KCM Cocinas. Todos los derechos reservados.</p>
+                <p class="mb-md-0 text-muted">&copy; 2025 El Shaddai Multiservicios. Todos los derechos reservados.</p>
             </div>
             <div class="col-md-6 text-center text-md-end">
                 <p class="mb-0 text-muted">Diseñado por  <a href="https://www.linkedin.com/in/emsd-b15b462b5" class="text-decoration-none text-muted">Erick Santiago</a></p>
