--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@
                     <a href="https://www.facebook.com/people/El-Shaddai-Multiservicios/100093314619469/?_rdr" class="me-3 text-dark" aria-label="Facebook">
                         <i class="fab fa-facebook-f fa-lg"></i>
                     </a>
-                    <a href="https://www.instagram.com/Shaddai/" class="me-3 text-dark" aria-label="Instagram">
+                    <!--<a href="https://www.instagram.com/Shaddai/" class="me-3 text-dark" aria-label="Instagram">
                         <i class="fab fa-instagram fa-lg"></i>
-                    </a>
+                    </a> -->
                     <a href="https://walink.co/e44ed5" class="me-3 text-dark" aria-label="WhatsApp">
                         <i class="fab fa-whatsapp fa-lg"></i>
                     </a>
