--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>El Shaddai Multiservicios</title>
     <meta name="description" content="El Shaddai Multiservicios: Instalación de Minisplit, Trabajos de Pintura, Instalación de Tablaroca, Servicios Eléctricos">
     <meta name="keywords" content="Minisplit, Pintura, Tablaroca, Electricidad, Servicios">
+    <!-- Elimina la línea duplicada de viewport y smooth-scroll -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>El Shaddai Multiservicios</title>
+    <meta name="description" content="El Shaddai Multiservicios: Instalación de Minisplit, Trabajos de Pintura, Instalación de Tablaroca, Servicios Eléctricos">
+    <meta name="keywords" content="Minisplit, Pintura, Tablaroca, Electricidad, Servicios">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis" rel="preconnect">
